development-runs/528/k8s/prod/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: sme-app
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: sme-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/part-of: sme-app
    spec:
      containers:
        - name: api
          image: ralfx22/sme-api:v2
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
